--- a/补充说明.md
+++ b/补充说明.md
@@ -1,6 +1,5 @@
-# 流行框架第二天：Git与Angular入门
 
-## 复习
+## 补充
 
 - Node Node.js --- 类似一个操作系统
   + 一个JS的运行环境
@@ -46,7 +45,7 @@
   > 重复的轮子太多，抓住轮子与轮子之间的共性
   >
 
-- Gulp  FIS3
+- 国内类似Gulp  百度FIS3
 - http://www.ydcss.com/archives/94
 
 - msi - microsoft installer 微软安装器
@@ -174,3 +173,4 @@ https://github.com/jobbole/awesome-css-cn
   + bower
   + npm
 - 基本使用
+
